changes to the hrefs to index.html

--- a/GA/10.borrowerloanapplication.html
+++ b/GA/10.borrowerloanapplication.html
@@ -101,7 +101,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="1.homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="7.typesoflending.html">Lendings</a></li>
                 <li><a href="8.digitalwallet.html">Digital Wallet</a></li>
                 <li><a href="9.borrowerhome.html">Borrower Lending</a></li>
