--- a/GA/13.borrowerfundsdisbursementrepaymentandcomplete.html
+++ b/GA/13.borrowerfundsdisbursementrepaymentandcomplete.html
@@ -141,7 +141,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="1.homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="7.typesoflending.html">Lendings</a></li>
                 <li><a href="8.digitalwallet.html">Digital Wallet</a></li>
                 <li><a href="9.borrowerhome.html">Borrower Lending</a></li>
@@ -230,7 +230,7 @@
                 // Alert or display a completion message
                 alert('Your loan process is complete. Thank you!');
                 // Redirect to homepage
-                window.location.href = '1.homepage.html';  // Adjust the URL as needed
+                window.location.href = 'index.html';  // Adjust the URL as needed
             });
         });
     </script>
