--- a/GA/8.digitalwallet.html
+++ b/GA/8.digitalwallet.html
@@ -118,7 +118,7 @@
             <img src="imagesneeded/Smiles.png" alt="Smiles Lending Logo">
             <nav>
                 <ul>
-                    <li><a href="1.homepage.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="7.typesoflending.html">Lendings</a></li>
                     <li><a href="8.digitalwalletinterface.html">Digital Wallet</a></li>
                     <li><a href="14.borrowerhome.html">Borrower Lending</a></li>
