changes to ppt, admin part to dashboard, docsub and href to agreementsign to show automation

--- a/11.borrowerdocsub.html
+++ b/11.borrowerdocsub.html
@@ -164,6 +164,7 @@
         function submitForm() {
             // Display alert
             alert('Submission is done.');
+            alert('Automation is done to agree/reject loan.');
             
             // Redirect to the next page
             window.location.href = '12.borroweragreementsigning.html'; // Replace 'nextpage.html' with the URL of your next HTML page
