--- a/12.borroweragreementsigning.html
+++ b/12.borroweragreementsigning.html
@@ -114,7 +114,7 @@
     </header>
     <main>
         <section class="agreement-section">
-            <h1>Loan Agreement</h1>
+            <h1>Loan Agreement Agreed</h1>
             <div class="details">
                 <p><strong>Amount Loaned:</strong> 10,000</p>
                 <p><strong>Type of Loan:</strong> Student Loan</p>
