tries to bootstrap and wrong href changes

--- a/3.login.html
+++ b/3.login.html
@@ -103,7 +103,7 @@
                 <li><a href="20.contact.html">Contact</a></li>
             </ul>
         </nav>
-        <button class="login-btn" onclick="window.location.href='3.login.html';">Login</button>
+        <button class="register-btn" onclick="window.location.href='4.signup.html';">Register</button>
     </header>
     <main>
         <section id="login">
