--- a/8.digitalwallet.html
+++ b/8.digitalwallet.html
@@ -120,8 +120,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="7.typesoflending.html">Lendings</a></li>
-                    <li><a href="8.digitalwalletinterface.html">Digital Wallet</a></li>
-                    <li><a href="14.borrowerhome.html">Borrower Lending</a></li>
+                    <li><a href="8.digitalwallet.html">Digital Wallet</a></li>
+                    <li><a href="9.borrowerhome.html">Borrower Lending</a></li>
                     <li><a href="14.investorhome.html">Investor Lending</a></li>
                     <li><a href="20.contact.html">Contact</a></li>
                 </ul>
