making colours same for body

--- a/8.digitalwallet.html
+++ b/8.digitalwallet.html
@@ -10,7 +10,7 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #1E0E2F;
+            background-color: #13072e;
             color: white;
             margin: 0;
             padding: 0;
@@ -22,7 +22,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #1E0E2F; /* Same as body background */
+            background-color: #13072e; /* Same as body background */
             padding: 20px;
         }
         .header img {
@@ -116,6 +116,7 @@
     <div class="container">
         <div class="header">
             <img src="imagesneeded/Smiles.png" alt="Smiles Lending Logo">
+            <span>Smiles Lending</span>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
