--- a/7.typesoflending.html
+++ b/7.typesoflending.html
@@ -10,7 +10,7 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #1E0E2F;
+            background-color:#13072e;
             color: white;
             margin: 0;
             padding: 0;
