allowing investor to pay by digital wallet and alert them done payment

--- a/11.borrowerdocsub.html
+++ b/11.borrowerdocsub.html
@@ -10,7 +10,7 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #13072E; /* Updated background color */
+            background-color: #13072E;
             color: white;
             margin: 0;
             padding: 0;
@@ -20,7 +20,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 1rem 2rem;
-            background-color: #13072E; /* Updated header background color */
+            background-color: #13072E;
         }
         .logo {
             display: flex;
@@ -42,7 +42,7 @@
             text-decoration: none;
         }
         .button {
-            background-color: #81039B; /* Updated button color */
+            background-color: #81039B; 
             color: white;
             border: none;
             padding: 0.5rem 1rem;
@@ -53,7 +53,7 @@
             padding: 2rem;
         }
         .submission-section {
-            background-color: #490B3D; /* Updated section background color */
+            background-color: #490B3D;
             padding: 2rem;
             border-radius: 10px;
         }
@@ -78,7 +78,7 @@
             flex: 1;
         }
         .upload-icon {
-            background-color: #81039B; /* Updated upload icon color */
+            background-color: #81039B;
             color: white;
             padding: 0.5rem;
             border-radius: 5px;
@@ -92,7 +92,7 @@
             margin-top: 2rem;
         }
         .cta-btn {
-            background-color: #81039B; /* Updated button color */
+            background-color: #81039B;
             color: white;
             border: none;
             padding: 0.5rem 1rem;
@@ -162,12 +162,11 @@
     </main>
     <script>
         function submitForm() {
-            // Display alert
             alert('Submission is done.');
             alert('Automation is done to agree/reject loan.');
             
             // Redirect to the next page
-            window.location.href = '12.borroweragreementsigning.html'; // Replace 'nextpage.html' with the URL of your next HTML page
+            window.location.href = '12.borroweragreementsigning.html'; // Replace '12.borroweragreementsigning.html' with the URL of my next HTML page
         }
     </script>
 </body>
