--- a/14.investorhome.html
+++ b/14.investorhome.html
@@ -10,7 +10,7 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #13072E; /* Consistent background color */
+            background-color: #13072E;
             color: white;
             margin: 0;
             padding: 0;
@@ -41,7 +41,7 @@
             text-decoration: none;
         }
         .register-btn, .cta-btn {
-            background-color: #81039B; /* Consistent button color */
+            background-color: #81039B;
             color: white;
             border: none;
             padding: 0.5rem 1rem;
@@ -56,7 +56,7 @@
             height: 80vh;
         }
         .investor-section {
-            background-color: #490B3D; /* Consistent section background color */
+            background-color: #490B3D;
             padding: 2rem;
             border-radius: 10px;
             text-align: center;
@@ -69,7 +69,7 @@
             margin-top: 2rem;
         }
         .card {
-            background-color: #6A4B8F; /* Consistent card color */
+            background-color: #6A4B8F;
             padding: 1rem;
             border-radius: 10px;
             width: 30%;
