--- a/16.investorloaning.html
+++ b/16.investorloaning.html
@@ -86,7 +86,7 @@
         .fee-info {
             margin-top: 1rem;
             font-size: 1rem;
-            color: #FFD700; /* Gold color for the fee information */
+            color: #FFD700;
         }
     </style>
 </head>
@@ -124,17 +124,16 @@
                     <label for="payment-method">Payment Method:</label>
                     <select id="payment-method" name="payment-method" required>
                         <option value="">Select payment method</option>
+                        <option value="digital-wallet">Digital Wallet</option>
                         <option value="credit-card">Credit Card</option>
                         <option value="debit-card">Debit Card</option>
                         <option value="bank-transfer">Bank Transfer</option>
-                        <!-- Add more options as needed -->
                     </select>
                 </div>
                 <div class="fee-info" id="fee-info">
-                    <!-- Fee information will be displayed here -->
                 </div>
                 <div class="cta-buttons">
-                    <button type="button" class="cta-btn" onclick="window.location.href='17.investorpooloffunds.html'">Submit Payment</button>
+                    <button type="button" class="cta-btn" onclick="fundsPaymentAlert(),location.href='17.investorpooloffunds.html'">Submit Payment</button>
                     <button type="button" class="button" onclick="window.location.href='1.homepage.html'">Home</button>
                 </div>
             </form>
@@ -145,6 +144,9 @@
             const amount = document.getElementById('amount').value;
             const fee = (amount * 0.01).toFixed(2); // 1% fee
             document.getElementById('fee-info').innerText = `Fee (1%): $${fee}`;
+        }
+        function fundsPaymentAlert(){
+            alert("Payment Successful! Funds have been transferred.");
         }
     </script>
 </body>
