--- a/10.borrowerloanapplication.html
+++ b/10.borrowerloanapplication.html
@@ -10,7 +10,7 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #13072E; /* Updated background color */
+            background-color: #13072E;
             color: white;
             margin: 0;
             padding: 0;
@@ -41,7 +41,7 @@
             text-decoration: none;
         }
         .button {
-            background-color: #81039B; /* Updated button color */
+            background-color: #81039B;
             color: white;
             border: none;
             padding: 0.5rem 1rem;
@@ -52,7 +52,7 @@
             padding: 2rem;
         }
         .form-section {
-            background-color: #490B3D; /* Updated section background color */
+            background-color: #490B3D;
             padding: 2rem;
             border-radius: 10px;
             text-align: center;
@@ -71,7 +71,7 @@
             padding: 0.5rem;
             border: none;
             border-radius: 5px;
-            background-color: #1E0E2F; /* Updated input background color */
+            background-color: #1E0E2F;
             color: white;
         }
         .form-group input[type="file"] {
@@ -84,7 +84,7 @@
             margin-top: 1rem;
         }
         .cta-btn {
-            background-color: #81039B; /* Updated button color */
+            background-color: #81039B;
             color: white;
             border: none;
             padding: 0.5rem 1rem;
