changes to alert button and complete href for investor

--- a/10.borrowerloanapplication.html
+++ b/10.borrowerloanapplication.html
@@ -148,7 +148,7 @@
     <script>
         document.getElementById('loan-application-form').addEventListener('submit', function(event) {
             event.preventDefault();
-            alert('Form submitted!');
+            alert('Loan Application submitted!');
             window.location.href ='11.borrowerdocsub.html';
         });
     </script>
