--- a/18.investorearningandrepayments.html
+++ b/18.investorearningandrepayments.html
@@ -124,7 +124,7 @@
                 <p><strong>Pending Repayments:</strong> $1,000</p>
             </div>
             <div class="cta-buttons">
-                <a href="1.homepage.html"><button id="completion-btn" class="cta-btn">Complete</button></a>
+                <a href="index.html"><button id="completion-btn" class="cta-btn">Complete</button></a>
             </div>
         </section>
     </main>
