--- a/16.investorloaning.html
+++ b/16.investorloaning.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="cta-buttons">
                     <button type="button" class="cta-btn" onclick="fundsPaymentAlert(),location.href='17.investorpooloffunds.html'">Submit Payment</button>
-                    <button type="button" class="button" onclick="window.location.href='1.homepage.html'">Home</button>
+                    <button type="button" class="button" onclick="window.location.href='index.html'">Home</button>
                 </div>
             </form>
         </section>
