--- a/2.whychooseus.html
+++ b/2.whychooseus.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why Choose Smiles Lending</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         html {
             font-size: 16px; /* This sets the base font size to 16px, making 1rem equal to 16px */
@@ -47,6 +50,14 @@
             border-radius: 20px;
             cursor: pointer;
         }
+        .cta-btn{
+            background-color: #81039B;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            cursor: pointer;
+        }
         main {
             display: flex;
             justify-content: center;
@@ -66,6 +77,7 @@
             background-color: #490B3D;
             padding: 1rem;
             border-radius: 10px;
+            height: 100%;
         }
         .reason-number {
             background-color: white;
@@ -73,19 +85,6 @@
             padding: 0.25rem 0.5rem;
             border-radius: 15px;
             font-size: 0.8rem;
-        }
-        .cta-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-        }
-        .cta-btn {
-            background-color: #81039B;
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -134,6 +133,11 @@
                 <a href="14.investorhome.html"><button class="cta-btn" >Start with lending</button></a>
             </div>
         </section>
+        </div>
     </main>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
