changes for bootstrap

--- a/19.dashboard.html
+++ b/19.dashboard.html
@@ -93,13 +93,13 @@
             <span>Smiles Lending</span>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="7.typesoflending.html">Lendings</a></li>
-                <li><a href="8.digitalwallet.html">Digital Wallet</a></li>
-                <li><a href="9.borrowerhome.html">Borrower Lending</a></li>
-                <li><a href="14.investorhome.html">Investor Lending</a></li>
-                <li><a href="20.contact.html">Contact</a></li>
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="7.typesoflending.html">Lendings</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="8.digitalwallet.html">Digital Wallet</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="9.borrowerhome.html">Borrower Lending</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="14.investorhome.html">Investor Lending</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="20.contact.html">Contact</a></li>
             </ul>
         </nav>
         <button class="button">How to withdraw earnings and repayments?</button>
