--- a/2.whychooseus.html
+++ b/2.whychooseus.html
@@ -63,6 +63,7 @@
             justify-content: center;
             align-items: center;
             height: 80vh;
+            margin-top: 80px;
         }
         #why-choose-us {
             padding: 2rem;
@@ -95,13 +96,13 @@
             <span>Smiles Lending.</span>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="7.typesoflending.html">Lendings</a></li>
-                <li><a href="8.digitalwallet.html">Digital Wallet</a></li>
-                <li><a href="9.borrowerhome.html">Borrower Lending</a></li>
-                <li><a href="14.investorhome.html">Investor Lending</a></li>
-                <li><a href="20.contact.html">Contact</a></li>
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="7.typesoflending.html">Lendings</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="8.digitalwallet.html">Digital Wallet</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="9.borrowerhome.html">Borrower Lending</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="14.investorhome.html">Investor Lending</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="20.contact.html">Contact</a></li>
             </ul>
         </nav>
         <a href="4.signup.html">
@@ -128,7 +129,7 @@
                     <p>We hold licenses to provide advice to customers and ensure all transactions follow rules.</p>
                 </div>
             </div>
-            <div class="cta-buttons">
+            <div class="cta-buttons text-center">
                 <a href="9.borrowerhome.html"><button class="cta-btn" >Start with borrowing</button></a>
                 <a href="14.investorhome.html"><button class="cta-btn" >Start with lending</button></a>
             </div>
