--- a/3.login.html
+++ b/3.login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Smiles Lending</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         html {
             font-size: 16px; /* This sets the base font size to 16px, making 1rem equal to 16px */
@@ -53,6 +54,7 @@
             justify-content: center;
             align-items: center;
             height: 80vh;
+            margin-top: 80px;
         }
         #login {
             background-color: #490B3D;
@@ -94,13 +96,13 @@
             <span>Smiles Lending.</span>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="7.typesoflending.html">Lendings</a></li>
-                <li><a href="8.digitalwallet.html">Digital Wallet</a></li>
-                <li><a href="9.borrowerhome.html">Borrower Lending</a></li>
-                <li><a href="14.investorhome.html">Investor Lending</a></li>
-                <li><a href="20.contact.html">Contact</a></li>
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="7.typesoflending.html">Lendings</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="8.digitalwallet.html">Digital Wallet</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="9.borrowerhome.html">Borrower Lending</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="14.investorhome.html">Investor Lending</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="20.contact.html">Contact</a></li>
             </ul>
         </nav>
         <button class="register-btn" onclick="window.location.href='4.signup.html';">Register</button>
@@ -146,5 +148,9 @@
             });
         });
     </script>
+        <!-- Bootstrap JS and dependencies -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
